@@ -1,9 +1,13 @@
 Changelog for GEMC
 ==================
 
+8/11/16
+ - getStringVectorFromString and getStringVectorFromStringWithDelimiter from mlibrary
+
 8/10/16
  - mlibrary gstring introduced: string manipulation library. This will replace many methods that do not belong in gemc
  - changelog finalized up to 2/4/2008
+ - adding RF option"
 
 8/9/16
  - ctof paddle length in the ctof constants - not derived by dimensions as ctof is now from CAD.
